# OAuth2-Demo

./: .pdm-python  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
scripts/: entrypoint.sh
src/: main.py
templates/: index.html
