[project]
name = "OAuth2-Demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GGGoingdown", email = "eddiepai0401@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
